@@ -1,4 +1,5 @@
 0.04
+ - API change: Add id parameter to Publisher object.
  - API change: Add work_period_start and work_period_end getter methods to
    MARC::Convert::Wikidata::Object::People class
  - API change: Rewrite publisher parameter in Series to Publisher object.
